--- a/src/main/resources/validation.properties
+++ b/src/main/resources/validation.properties
@@ -1,5 +1,5 @@
 NotEmpty=Required field
-Size.userForm.username=Please use between 6 and 32 characters
+Size.userForm.username=Please use username between 8 and 32 characters
 Duplicate.userForm.username=Someone already has this username
 Size.userForm.password=Try one with at least 8 characters
 Diff.userForm.passwordConfirm=These passwords does not match
