--- a/pom.xml
+++ b/pom.xml
@@ -22,8 +22,8 @@
 
 	<licenses>
 		<license>
-			<name>The MIT License (MIT)</name>
-			<url>https://opensource.org/licenses/MIT</url>
+			<name>GNU AFFERO GENERAL PUBLIC LICENSE</name>
+			<url>https://www.gnu.org/licenses/agpl-3.0.en.html</url>
 		</license>
 	</licenses>
 
